2001-12-28  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Fixed bug/TODO where ucxt wasn't building the list of
	goto targets from all the opcodes with goto offsets (it was only
	handling jmp/jne).

2001-12-27  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc,gamemap.h (public): Added terrain-list modification
	methods.
	* gamemap.cc,gamemap.h (public): Many map methods moved here from
	Game_window.

	* objs/egg.cc (Mirror_object): Watch for Demon mirror in FOV.

2001-12-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/ucsched.cc: use eventid 3 for usecode functions on all eggs,
	not just usecode eggs. Fixes serpent gates in SI without SS
	* usecode/ucdisasm.cc: changed output of 16-bit immediates to signed
	* usecode/useval.*: added "operator<<(ostream&, Usecode_value&)"

2001-12-26  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Added opcodes 4C and 4D. Also added option to load
	a specific usecode file to ucxt.

2001-12-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/uctools.h, usecode/ucinternal.cc: added opcodes 4C and 4D,
	spanish SI works now

2001-12-26  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/data/opcodes.txt: Cleaned up callis and calli output
	under -fz. Fixed a 'bug' with the output of the binary math/comparison
	output functions' parameters' being around the wrong way. 

2001-12-25  Patrick Burke  <takhisisi@yahoo.com.au>
	* usecode/ucxt/*: Added 'return' flag to opcodes.txt, better error
	messages to handle badly edited opcodes.txt files, and correct RTS
	handling for the CALL opcode.
	* usecode/ucxt/opcodes.txt: Fixed output of cmps and arrc opcodes under
	-fz
	* usecode/ucxt/*: Added a 'full text' output string in addition to the
	original short/comment text output. Added escaping for characters
	('\\' and '\"') in the 'full text' output strings.

2001-12-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>