@@ -848,18 +848,26 @@ void ExultStudio::read_from_server
 		}
 	cout << "Read " << datalen << " bytes from server" << endl;
 	cout << "ID = " << (int) id << endl;
-	if (id == Exult_server::obj)
+	switch (id)
+		{
+	case Exult_server::obj:
 		open_obj_window(data, datalen);
-	else if (id == Exult_server::egg)
+		break;
+	case Exult_server::egg:
 		open_egg_window(data, datalen);
-	else if (id == Exult_server::npc)
+		break;
+	case Exult_server::npc:
 		open_npc_window(data, datalen);
-	else if (id == Exult_server::user_responded ||
-		 id == Exult_server::cancel)
-		{			// Send msg. to callback.
-		if (waiting_for_server)
+		break;
+	case Exult_server::user_responded:
+	case Exult_server::cancel:
+	case Exult_server::locate_terrain:
+	case Exult_server::swap_terrain:
+	case Exult_server::insert_terrain:
+		if (waiting_for_server)	// Send msg. to callback.
 			waiting_for_server((int) id, data, datalen);
 		waiting_for_server = 0;
+		break;
 		}
 	}
 
